fix(contextual-menu): icons layout shift

--- a/webapp/src/app/post-login-app/default-asset-group/default-asset-group.component.css
+++ b/webapp/src/app/post-login-app/default-asset-group/default-asset-group.component.css
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -50,7 +50,7 @@
   font-family: var(--text-medium-font-family);
   color: var(--text-high-emphasis);
   align-items: center;
-  padding-bottom: 3px;
+  padding-bottom: 2px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
